--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -36,16 +36,23 @@ jobs:
       pr: ${{ env.PR }}
     steps:
       - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+        id: tea
+        with:
+          cache-prefix: bottle
+          prefix: ${{ github.workspace }}
+
+      - name: configure scripts PATH
+        run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         if: ${{ inputs.new-version }}
         with:
           name: ${{ inputs.platform }}
 
-      - uses: teaxyz/pantry.core/.github/actions/fetch-pr-artifacts@cache-brewkit
+      - run: fetch-pr-artifacts.ts ${{ github.repository }} ${{ github.sha }} ${{ inputs.platform }} >>$GITHUB_ENV
         if: ${{ !inputs.new-version }}
-        with:
-          token: ${{ github.token }}
+        env:
+          GITHUB_TOKEN: ${{github.token}}
           AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -57,7 +64,7 @@ jobs:
             echo "$file=$(cat $file)" >>$GITHUB_ENV
           done
 
-      - uses: teaxyz/pantry.core/.github/actions/codesign@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/apple-signing@cache-brewkit
         if: startsWith(inputs.platform, 'darwin+')
         with:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_P12 }}
@@ -73,21 +80,19 @@ jobs:
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
 
-      - uses: teaxyz/pantry.core/.github/actions/bottle@cache-brewkit
+      - run: bottle.ts $built
         id: bottle-xz
-        with:
-          built: ${{ env.built }}
-          compresson: xz
-          gpg-key-id: ${{ secrets.GPG_KEY_ID }}
-          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+        env:
+          COMPRESSION: xz
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-      - uses: teaxyz/pantry.core/.github/actions/bottle@cache-brewkit
+      - run: bottle.ts $built
         id: bottle-gz
-        with:
-          built: ${{ env.built }}
-          compresson: gz
-          gpg-key-id: ${{ secrets.GPG_KEY_ID }}
-          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+        env:
+          COMPRESSION: gz
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
       - run: |
           echo ${{ steps.bottle-gz.outputs.bottles }} ${{ steps.bottle-xz.outputs.bottles }} >bottles
@@ -113,6 +118,15 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
+      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+        id: tea
+        with:
+          cache-prefix: upload
+          prefix: ${{ github.workspace }}
+
+      - name: configure scripts PATH
+        run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
+
       - uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.platform }}-bottles
@@ -124,13 +138,15 @@ jobs:
             echo "$file=$(cat $file)" >>$GITHUB_ENV
           done
 
-      - uses: teaxyz/pantry.core/.github/actions/upload@cache-brewkit
-        with:
-          pkgs: ${{ needs.bottle.outputs.built }} ${{ needs.bottle.outputs.built }}
-          srcs: ${{ needs.bottle.outputs.srcs }} ${{ needs.bottle.outputs.srcs }}
-          bottles: ${{ env.bottles }}
-          checksums: ${{ env.checksums }}
-          signatures: ${{ env.signatures }}
+      - name: upload bottles
+        id: upload
+        run: upload.ts
+          --pkgs ${{ needs.bottle.outputs.built }} ${{ needs.bottle.outputs.built }}
+          --srcs ${{ needs.bottle.outputs.srcs }} ${{ needs.bottle.outputs.srcs }}
+          --bottles $bottles
+          --checksums $checksums
+          --signatures $signatures
+        env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
