--- a/.github/deno.jsonc
+++ b/.github/deno.jsonc
@@ -16,14 +16,7 @@
   },
   "tea": {
     "dependencies": {
-      "deno.land": "^1.30",
-      "tea.xyz/brewkit": "^0.3"
-    },
-    "env": {
-      // if your primary tea.prefix is somewhere else then you’ll
-      // need to `tea --sync` in this dev-env
-      "TEA_PANTRY_PATH": "{{srcroot}}:{{home}}/.tea/tea.xyz/var/pantry",
-      "TEA_PREFIX": "{{srcroot}}/tea.out"
+      "deno.land": "^1.30"
     }
   },
   "importMap": "https://raw.githubusercontent.com/teaxyz/cli/v0.23/import-map.json"
