--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
-  "deno.config": "deno.jsonc",
+  "deno.config": ".github/deno.jsonc",
   "deno.importMap": "../cli/import-map.json"
 }
