--- a/.github/actions/stage-build-artifacts/action.yml
+++ b/.github/actions/stage-build-artifacts/action.yml
@@ -26,7 +26,7 @@ runs:
 
     - uses: teaxyz/pantry.core/.github/actions/cache@cache-brewkit
       with:
-        cache-hash: get-platform-${{ hashFiles('.github/actions/stage-build-artifacts/cache-artifacts.ts', './deno.jsonc') }}
+        cache-name: stage
 
     - run: ${{ github.action_path }}/cache-artifacts.ts
         ${{github.repository}}
