--- a/.github/actions/has-artifacts/action.yml
+++ b/.github/actions/has-artifacts/action.yml
@@ -28,7 +28,7 @@ runs:
       with:
         srcroot: null
 
-    - uses: teaxyz/pantry.core/.github/actions/cache@cache-brewkit
+    - uses: teaxyz/pantry.core/.github/actions/cache@main
       with:
         cache-name: has-artifacts
 
