--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -22,7 +22,7 @@ jobs:
       os: ${{ steps.platform.outputs.os }}
       cache-set: ${{ steps.platform.outputs.cache-set }}
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/get-platform@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/get-platform@main
         id: platform
         with:
           platform: ${{ inputs.platform }}
@@ -35,14 +35,14 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
 
       - uses: actions/download-artifact@v3
         if: ${{ inputs.new-version }}
         with:
           name: ${{ inputs.platform }}
 
-      - uses: teaxyz/pantry.core/.github/actions/fetch-pr-artifacts@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/fetch-pr-artifacts@main
         if: ${{ !inputs.new-version }}
         with:
           token: ${{ github.token }}
@@ -65,7 +65,7 @@ jobs:
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
 
-      - uses: teaxyz/pantry.core/.github/actions/bottle@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/bottle@main
         id: bottle-xz
         with:
           built: ${{ env.built }}
@@ -73,7 +73,7 @@ jobs:
           gpg-key-id: ${{ secrets.GPG_KEY_ID }}
           gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-      - uses: teaxyz/pantry.core/.github/actions/bottle@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/bottle@main
         id: bottle-gz
         with:
           built: ${{ env.built }}
@@ -116,7 +116,7 @@ jobs:
             echo "$file=$(cat $file)" >>$GITHUB_ENV
           done
 
-      - uses: teaxyz/pantry.core/.github/actions/upload@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/upload@main
         with:
           pkgs: ${{ needs.bottle.outputs.built }} ${{ needs.bottle.outputs.built }}
           srcs: ${{ needs.bottle.outputs.srcs }} ${{ needs.bottle.outputs.srcs }}
