--- a/.github/actions/setup-brewkit/action.yml
+++ b/.github/actions/setup-brewkit/action.yml
@@ -33,7 +33,7 @@ runs:
         cache-name: setup
 
     - run: |
-        # if test -d "{{ github.workspace }}"/projects; then
+        if test -d "{{ github.workspace }}"/projects; then
           echo "TEA_PANTRY_PATH=${{ github.workspace }}" >> $GITHUB_ENV
-        # fi
+        fi
       shell: sh
