--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -51,7 +51,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - run: tar xzvf artifacts.tgz
+      - run: tar xzvf ~/artifacts.tgz
         working-directory: ${{ steps.tea.outputs.prefix }}
 
       - run: |
