Stop pip from checking for updates, we do that

--- a/projects/pip.pypa.io/package.yml
+++ b/projects/pip.pypa.io/package.yml
@@ -8,6 +8,10 @@ versions:
 dependencies:
   python.org: ^3.7
 
+runtime:
+  env:
+    PIP_DISABLE_PIP_VERSION_CHECK: 1
+
 build:
   dependencies:
     curl.se: '*'
@@ -25,7 +29,7 @@ build:
       sed -i.bak -e 's|#!{{ deps.python.org.prefix }}/bin/|#!/usr/bin/env |g' $binfile
       rm $binfile.bak
     done
-    rm bin/pip{{deps.python.org.version.major}}.{{deps.python.org.version.minor}}
+    rm -f bin/pip{{deps.python.org.version.major}}.{{deps.python.org.version.minor}}
 
   env:
     shebangs:
