update(ca-certs)

--- a/projects/curl.se/ca-certs/package.yml
+++ b/projects/curl.se/ca-certs/package.yml
@@ -1,7 +1,16 @@
 distributable: ~
 
 versions:
+  - 2023.01.10
+  - 2022.10.11
   - 2022.07.19
+  - 2022.04.26
+  - 2022.03.29
+  - 2022.03.18
+  - 2022.02.01
+  - 2021.10.26
+  - 2021.09.30
+  - 2021.07.05
 
 runtime:
   env:
@@ -11,10 +20,9 @@ build:
   dependencies:
     curl.se: '*'
   script: |
-    cd "{{prefix}}"
-    mkdir -p ssl
+    mkdir -p "{{prefix}}/ssl"
     URL_VER=$(echo {{version.raw}} | tr -- . -)
-    curl -k https://curl.se/ca/cacert-$URL_VER.pem -o ssl/cert.pem
+    curl -k https://curl.se/ca/cacert-$URL_VER.pem -o "{{prefix}}"/ssl/cert.pem
 
 test:
   dependencies:
