fix making certain changes in packages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,7 +119,7 @@ jobs:
         # Note: needed when changing a directory to a symlink, for example in
         # https://github.com/teaxyz/pantry.extra/pull/435
         run: |
-          tar tzf artifacts.tgz | \
+          tar tzf $GITHUB_WORKSPACE/artifacts.tgz | \
             awk '{ print length, $0 }' | \
             sort -n -s -r | \
             cut -d" " -f2- | \
