use PIC/PIE on linux-x86-64

--- a/projects/tea.xyz/gx/cc/package.yml
+++ b/projects/tea.xyz/gx/cc/package.yml
@@ -13,6 +13,13 @@ dependencies:
   darwin:
     apple.com/xcode/clt: '*'
 
+runtime:
+  env:
+    linux/x86-64:
+      LDFLAGS: $LDFLAGS -pie
+      CFLAGS: $CFLAGS -fPIC
+      CXXFLAGS: $CXXFLAGS -fPIC
+
 build:
   working-directory:
     ${{prefix}}/bin
