--- a/projects/nodejs.org/package.yml
+++ b/projects/nodejs.org/package.yml
@@ -38,6 +38,10 @@ build:
     - --with-intl=system-icu
     - --shared-openssl
     - --shared-zlib
+    linux/x86-64:
+      CFLAGS: -fPIC
+      CXXFLAGS: -fPIC
+      LDFLAGS: -pie
 
 test:
   script: |
