--- a/projects/github.com/westes/flex/package.yml
+++ b/projects/github.com/westes/flex/package.yml
@@ -14,7 +14,7 @@ build:
     tea.xyz/gx/cc: c99
     tea.xyz/gx/make: '*'
   script: |
-    ./configure --prefix={{ prefix }}
+    ./configure --prefix={{ prefix }} --with-pic --disable-bootstrap
     make --jobs {{ hw.concurrency }} install
   env:
     darwin:
