Don’t set TEA_PREFIX
Fixes https://github.com/teaxyz/cli/issues/427

We build to TEA_PREFIX by default in pantry dev-envs now. You can still override this if you want.

`TEA_PANTRY_PATH=foo tea bar` will now use

--- a/.github/actions/setup-brewkit/action.yml
+++ b/.github/actions/setup-brewkit/action.yml
@@ -24,7 +24,7 @@ runs:
       id: tea
       with:
         prefix: ${{ inputs.prefix }}
-        +: tea.xyz/brewkit~0.5
+        +: tea.xyz/brewkit~0.7
         # prevent pantry from reassigning TEA_PREFIX etc.
         srcroot: null
 
@@ -33,7 +33,7 @@ runs:
         cache-name: setup
 
     - run: |
-        if test -d "{{ github.workspace }}"/projects; then
+        if test -d "${{ github.workspace }}"/projects; then
           echo "TEA_PANTRY_PATH=${{ github.workspace }}" >> $GITHUB_ENV
         fi
       shell: sh
