--- a/tea.yaml
+++ b/tea.yaml
@@ -1,5 +1,4 @@
 dependencies:
-  tea.xyz/brewkit: ~0.5
+  tea.xyz/brewkit: ~0.7
 env:
-  TEA_PANTRY_PATH: ${{srcroot}}:{{home}}/.tea/tea.xyz/var/pantry
-  TEA_PREFIX: ${{srcroot}}/tea.out
+  TEA_PANTRY_PATH: ${{srcroot}}
