--- a/projects/rust-lang.org/package.yml
+++ b/projects/rust-lang.org/package.yml
@@ -41,10 +41,18 @@ build:
     python.org: 3
     openssl.org: '*' # needed to build openssl-sys
     freedesktop.org/pkg-config: ^0.29
+    crates.io/semverator: 0
   script: |-
     # --enable-optimize not available as of 1.63.0
-    if test {{version.major}} -eq 1 -a {{version.minor}} -lt 63; then
+    if semverator satisfies '<1.63' {{ version }}; then
       export ARGS="$ARGS --enable-optimize"
+    fi
+
+    # 1.68.0 introduced a regression w.r.t. CI builds
+    # https://github.com/rust-lang/rust/issues/108959
+    if semverator satisfies ^1.68 {{ version }}; then
+      sed -i.bak -e 's/if CiEnv::is_ci() {/if CiEnv::is_ci() \&\& config.rust_info.is_managed_git_subrepository() {/' src/bootstrap/native.rs
+      rm src/bootstrap/native.rs.bak
     fi
 
     ./configure $ARGS
@@ -69,7 +77,8 @@ build:
 
 test:
   script: |
-    rustc $FIXTURE -o hello
+    mv $FIXTURE hello.rs
+    rustc hello.rs
     ./hello
   fixture: |
     fn main() {
