--- a/projects/invisible-island.net/ncurses/package.yml
+++ b/projects/invisible-island.net/ncurses/package.yml
@@ -24,6 +24,13 @@ build:
         ln -s $ii $(echo $ii | tr -d w)
       done
     done
+
+    # things often expect either no namespace or namespace
+    cd ../include
+    mv ncursesw/* .
+    rmdir ncursesw
+    ln -s . ncursesw
+
   env:
     PCDIR: ${{prefix}}/lib/pkgconfig
     ARGS:
