restore brewkit to ^0.7.1
also hack to get tests working again

--- a/.github/actions/setup-brewkit/action.yml
+++ b/.github/actions/setup-brewkit/action.yml
@@ -24,7 +24,7 @@ runs:
       id: tea
       with:
         prefix: ${{ inputs.prefix }}
-        +: tea.xyz/brewkit~0.7
+        +: tea.xyz/brewkit^0.7.1
         # prevent pantry from reassigning TEA_PREFIX etc.
         srcroot: null
 
