--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,6 +131,9 @@ jobs:
       - run: pkg test ${{ inputs.projects }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          # FIXME: this shouldn't be necessary, but it currently is for the
+          # ubuntu+container test matrix entries. :/
+          TEA_PANTRY_PATH: ${{ github.workspace }}
 
       - name: '[post]'
         run:
