--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: teaxyz/setup@v0
         with:
           srcroot: null
-      - uses: teaxyz/pantry.core/.github/actions/cache@main
+      - uses: teaxyz/brewkit/.github/actions/cache@move-actions
       - run: ./.github/scripts/index-packages.ts ${{ inputs.projects }}
         env:
           TEA_PANTRY_PATH: ${{ github.workspace }}
