--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           srcroot: null
       - uses: teaxyz/brewkit/.github/actions/cache@move-actions
+      # TODO: convert to teaxyz/brewkit/.github/actions/index-packages
       - run: ./.github/scripts/index-packages.ts ${{ inputs.projects }}
         env:
           TEA_PANTRY_PATH: ${{ github.workspace }}
