--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -22,7 +22,7 @@ jobs:
       os: ${{ steps.platform.outputs.os }}
       cache-set: ${{ steps.platform.outputs.cache-set }}
     steps:
-      - uses: teaxyz/brewkit/.github/actions/get-platform@move-actions
+      - uses: teaxyz/brewkit/.github/actions/get-platform@main
         id: platform
         with:
           platform: ${{ inputs.platform }}
@@ -35,7 +35,7 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@move-actions
+      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@main
         id: tea
 
       - uses: actions/download-artifact@v3
@@ -43,7 +43,7 @@ jobs:
         with:
           name: ${{ inputs.platform }}
 
-      - uses: teaxyz/brewkit/.github/actions/fetch-pr-artifacts@move-actions
+      - uses: teaxyz/brewkit/.github/actions/fetch-pr-artifacts@main
         if: ${{ !inputs.new-version }}
         with:
           platform: ${{ inputs.platform }}
@@ -80,7 +80,7 @@ jobs:
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
 
-      - uses: teaxyz/brewkit/.github/actions/bottle@move-actions
+      - uses: teaxyz/brewkit/.github/actions/bottle@main
         id: bottle-xz
         with:
           built: ${{ env.built }}
@@ -88,7 +88,7 @@ jobs:
           gpg-key-id: ${{ secrets.GPG_KEY_ID }}
           gpg-key-passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-      - uses: teaxyz/brewkit/.github/actions/bottle@move-actions
+      - uses: teaxyz/brewkit/.github/actions/bottle@main
         id: bottle-gz
         with:
           built: ${{ env.built }}
@@ -121,7 +121,7 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
-      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@move-actions
+      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@main
         with:
           prefix: ${{ github.workspace }}
 
@@ -136,7 +136,7 @@ jobs:
             echo "$file=$(cat $file)" >>$GITHUB_ENV
           done
 
-      - uses: teaxyz/brewkit/.github/actions/upload@move-actions
+      - uses: teaxyz/brewkit/.github/actions/upload@main
         id: upload
         with:
           pkgs: ${{ needs.bottle.outputs.built }} ${{ needs.bottle.outputs.built }}
