--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           repo: teaxyz/pantry.core
 
-      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@move-actions
+      - uses: teaxyz/brewkit/.github/actions/setup-brewkit@main
 
       # TODO: convert to teaxyz/brewkit/.github/actions/map-projects-to-githubs
       - run: .github/scripts/map-projects-to-githubs.ts
@@ -22,7 +22,7 @@ jobs:
           WATCHER_URL: ${{ secrets.WATCHER_URL }}
           TEA_API_TOKEN: ${{ secrets.TEA_API_TOKEN }}
 
-      - uses: teaxyz/brewkit/.github/actions/has-artifacts@move-actions
+      - uses: teaxyz/brewkit/.github/actions/has-artifacts@main
         id: has-artifacts
         with:
           repo: ${{ github.repository }}
