--- a/.github/workflows/ci-scripts.yml
+++ b/.github/workflows/ci-scripts.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: teaxyz/setup@v0
         with:
           srcroot: .github
-      - uses: teaxyz/brewkit/.github/actions/cache@move-actions
+      - uses: teaxyz/brewkit/.github/actions/cache@main
         with:
           cache-name: ci-scripts
       - run: deno check --unstable **/*.ts
