--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: teaxyz/setup@v0
         with:
           srcroot: null
-      - uses: teaxyz/brewkit/.github/actions/cache@move-actions
+      - uses: teaxyz/brewkit/.github/actions/cache@main
       # TODO: convert to teaxyz/brewkit/.github/actions/index-packages
       - run: ./.github/scripts/index-packages.ts ${{ inputs.projects }}
         env:
