--- a/projects/invisible-island.net/ncurses/package.yml
+++ b/projects/invisible-island.net/ncurses/package.yml
@@ -21,7 +21,7 @@ build:
     for lib in form menu ncurses panel curses++; do
       for ii in $(find . -name lib${lib}w\*); do
         # hopefully no new w's will be introduced
-        ln -s $ii $(echo $ii | tr -d w)
+        ln -sf $ii $(echo $ii | tr -d w)
       done
     done
 
@@ -29,7 +29,7 @@ build:
     cd ../include
     mv ncursesw/* .
     rmdir ncursesw
-    ln -s . ncursesw
+    ln -sf . ncursesw
 
   env:
     PCDIR: ${{prefix}}/lib/pkgconfig
