--- a/projects/gnu.org/readline/package.yml
+++ b/projects/gnu.org/readline/package.yml
@@ -4,10 +4,11 @@ distributable:
 
 versions:
   #TODO brew has a couple patches we should apply
+  - 8.2
   - 8.1
 
 dependencies:
-  invisible-island.net/ncurses: 6
+  invisible-island.net/ncurses: ^6
 
 build:
   dependencies:
@@ -21,6 +22,6 @@ test:
   dependencies:
     tea.xyz/gx/cc: c99
   script: |
-    cc -lreadline fixture.c
+    cc -lreadline -lncurses fixture.c
     test "$(echo "Hello, World!" | ./a.out)" = "test> Hello, World!
     Hello, World!\\n"
